<?xml version="1.0"?>
<package format="2">
    <name>robot_state_controller</name>
    <version>0.1.2</version>
    <description>A template for ROS packages.</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>rm_common</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>urdf</depend>
    <depend>kdl_parser</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_kdl</depend>
    <depend>realtime_tools</depend>
    <depend>pluginlib</depend>

    <export>
        <controller_interface plugin="${prefix}/robot_state_controller_plugin.xml"/>
    </export>

</package>
