<?xml version="1.0"?>
<package format="2">
    <name>tf_radar_controller</name>
    <version>0.0.0</version>
    <description>The tf radar controller package</description>
    <maintainer email="luotinkai@todo.todo">luotinkai</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rm_msgs</depend>
    <depend>rm_common</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>roslint</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>realtime_tools</depend>


    <export>
        <controller_interface plugin="${prefix}/tf_radar_controller_plugins.xml"/>
    </export>
</package>
