<?xml version="1.0"?>
<package format="2">
    <name>tof_radar_controller</name>
    <version>0.1.11</version>
    <description>The tof radar controller package</description>
    <maintainer email="luotinkai@todo.todo">luotinkai</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rm_common</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>


    <export>
        <controller_interface plugin="${prefix}/tof_radar_controller_plugins.xml"/>
    </export>
</package>
